--- a/assignment1.html
+++ b/assignment1.html
@@ -46,26 +46,94 @@
         <!-- section3 thousand of productive users -->
         <section class="productive-users">
             <div class="divPU">
-                <div class="titlePU">
+                <div class="titlePU open-sans-raleway">
                     <h3>Joined thousands of productive users</h3>
                 </div>
                 <div class="quantity-of-productive-users">
                     <div class="quantity">
-                        <div class="qtitle">50K</div>
+                        <div class="qtitle open-sans-inter">50K</div>
                         <div class="qp">Active users</div>
                     </div>
                     <div class="quantity">
-                        <div class="qtitle">2M</div>
+                        <div class="qtitle open-sans-inter">2M+</div>
                         <div class="qp">Focus sessions</div>
                     </div>
                     <div class="quantity">
-                        <div class="qtitle">95%</div>
+                        <div class="qtitle open-sans-inter">95%</div>
                         <div class="qp">Satisfaction Rate</div>
                     </div>
                 </div>
             </div>
         </section>
-
+        <!-- section4 what our users say -->
+         <section class="sec4">
+            <h3 class="sec4title open-sans-raleway">What our users say</h3>
+            <div class="users-reviews">
+                <!-- .users-review*3>.star-img+.review-title+.p-review+.id>.img+.titleandp>.title+.p -->
+                 <div class="users-review">
+                    <div class="star-img">
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                    </div>
+                    <div class="review-title open-sans-raleway">Loved by Designers</div>
+                    <div class="p-review">This template instantly leveled up our presence.” – Studio Vertex</div>
+                    <div class="id">
+                        <div class="img">
+                            <img src="./B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                        </div>
+                        <div class="titleandp">
+                            <div class="title">Reviewer name</div>
+                            <div class="p">Date</div>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="users-review">
+                    <div class="star-img">
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                    </div>
+                    <div class="review-title open-sans-raleway">Loved by Designers</div>
+                    <div class="p-review">This template instantly leveled up our presence.” – Studio Vertex</div>
+                    <div class="id">
+                        <div class="img">
+                            <img src="./B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                        </div>
+                        <div class="titleandp">
+                            <div class="title">Reviewer name</div>
+                            <div class="p">Date</div>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="users-review">
+                    <div class="star-img">
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                        <div><img src="../html and css/B12A01-landing-launchpad/Assets/icon-star.png" alt="" class="iconimg"></div>
+                    </div>
+                    <div class="review-title open-sans-raleway">Loved by Designers</div>
+                    <div class="p-review">This template instantly leveled up our presence.” – Studio Vertex</div>
+                    <div class="id">
+                        <div class="img">
+                            <img src="./B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                        </div>
+                        <div class="titleandp">
+                            <div class="title">Reviewer name</div>
+                            <div class="p">Date</div>
+                        </div>
+                    </div>
+                 </div>
+            </div>
+         </section>
+         <!-- section5 Ready to focus better -->
+          
     </Main>
     <footer>
 
