added section and footer

--- a/assignment1.html
+++ b/assignment1.html
@@ -133,10 +133,44 @@
             </div>
          </section>
          <!-- section5 Ready to focus better -->
-          
+          <section class="sec5">
+            <div class="text">
+                <h3 class="sec5title open-sans-raleway">Ready to focus better</h3>
+                <div class="sec5descript"><p>This template instantly leveled up our presence.” – Studio Vertex</p></div>
+                
+                <button class="btn-primary sec5btn">Get Started Free</button>
+            </div>
+            <img src="./B12A01-landing-launchpad/Assets/wc-big.png" alt="" class="sec5img">
+          </section>
+          <section class="sec6">
+            <div class="columns">
+                <div class="column">
+                    <div class="sec6title open-sans-raleway">Let’s Get in Touch</div>
+                </div>
+                <div class="column">
+                    <form action="">
+                        <div class="emailform"><p>email</p><input type="email" name="" id="" placeholder="Your email"></div>
+                        <div class="nameform"><p>Name</p><input type="text" placeholder="Your name"></div>
+                        <div class="messageform"><p>message</p><textarea name="" id="" cols="20" rows="10" placeholder="message"></textarea></div>
+                        <input type="button" value="Submit" class="btn-primary">
+                    </form>
+                </div>
+            </div>
+          </section>
     </Main>
     <footer>
-
+        <section>
+            <div class="footer1">
+                <div class="footertitle"><h2 class="open-sans-inter">LOGO</h2></div>
+                <div class="footerdes"><p class="">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p></div>
+                <div class="endings2 endings">
+                    <div class="ending"><p>Home</p></div>
+                    <div class="ending"><p>About</p></div>
+                    <div class="ending"><p>How it Works</p></div>
+                    <div class="ending"><p>Services</p></div>                    
+                </div>                
+            </div>
+        </section>
     </footer>
 </body>
 </html>
