--- a/assignment1.html
+++ b/assignment1.html
@@ -142,33 +142,34 @@
             </div>
             <img src="./B12A01-landing-launchpad/Assets/wc-big.png" alt="" class="sec5img">
           </section>
-          <section class="sec6">
-            <div class="columns">
-                <div class="column">
-                    <div class="sec6title open-sans-raleway">Let’s Get in Touch</div>
-                </div>
-                <div class="column">
+          <section>
+            <div class="section6">
+                <div class="sec6title"><h3 class="open-sans-raleway">Let's Get in Touch</h3></div>
+                <div class="form6">
                     <form action="">
-                        <div class="emailform"><p>email</p><input type="email" name="" id="" placeholder="Your email"></div>
-                        <div class="nameform"><p>Name</p><input type="text" placeholder="Your name"></div>
-                        <div class="messageform"><p>message</p><textarea name="" id="" cols="20" rows="10" placeholder="message"></textarea></div>
-                        <input type="button" value="Submit" class="btn-primary">
+                        <div class="forme">Email</div>
+                        <div class="formm"><input type="email" name="" id="" placeholder="Your email" class="formmd"></div>
+                        <div class="forme">Your Name</div>
+                        <div class="formm"><input type="text" name="" id="" placeholder="Your Name" class="formmd"></div>
+                        <div class="formm">Your message</div>
+                        <textarea name="" id="" cols="20" rows="8" placeholder="message" class="formmd"></textarea>
+                         <br><input type="submit" value="Submit" class="btn-primary">
                     </form>
                 </div>
             </div>
           </section>
     </Main>
     <footer>
-        <section>
-            <div class="footer1">
-                <div class="footertitle"><h2 class="open-sans-inter">LOGO</h2></div>
-                <div class="footerdes"><p class="">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p></div>
-                <div class="endings2 endings">
-                    <div class="ending"><p>Home</p></div>
-                    <div class="ending"><p>About</p></div>
-                    <div class="ending"><p>How it Works</p></div>
-                    <div class="ending"><p>Services</p></div>                    
-                </div>                
+        <section class="secfoot">
+            <div class="foot">
+                <div class="foottitle"><p class="footlogo open-sans-inter">LOGO</p></div>
+                <div class="footdes"><p class="footp">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p></div>
+                <div class="footlast">
+                    <div class="footty"><p>Home</p></div>
+                    <div class="footty"><p>About</p></div>
+                    <div class="footty"><p>How it Works</p></div>
+                    <div class="footty"><p>Services</p></div>
+                </div>
             </div>
         </section>
     </footer>
